* Properly make sure there is at least one WoW directory.

--- a/Source/eXLauncher.csproj
+++ b/Source/eXLauncher.csproj
@@ -104,7 +104,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Includes\Config.xml" />
+    <Content Include="Includes\Config.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
