--- a/Source/Launcher.csproj
+++ b/Source/Launcher.csproj
@@ -64,6 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddRemoveRealm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddRemoveRealm.Designer.cs">
+      <DependentUpon>AddRemoveRealm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Includes\SArray3.cs" />
     <Compile Include="Includes\Config.cs">
     </Compile>
@@ -78,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XML\XMLController.cs" />
     <Compile Include="XML\XMLValidator.cs" />
+    <EmbeddedResource Include="AddRemoveRealm.resx">
+      <DependentUpon>AddRemoveRealm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Master.resx">
       <DependentUpon>Master.cs</DependentUpon>
     </EmbeddedResource>
@@ -108,9 +117,8 @@
     <Content Include="Includes\Config.xml">
       <SubType>Designer</SubType>
     </Content>
-    <None Include="Resources\Launcherv21.png" />
-    <None Include="Resources\Launcherv31.png" />
-    <None Include="Resources\Launcherv2_realms.png" />
+    <None Include="Resources\messagebox.png" />
+    <None Include="Resources\realms.png" />
     <None Include="Resources\Launcherv2.png" />
     <None Include="Resources\Launcherv3.png" />
   </ItemGroup>
