--- a/Source/Launcher.csproj
+++ b/Source/Launcher.csproj
@@ -82,6 +82,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XML\PluginScanner.cs" />
     <Compile Include="XML\XMLController.cs" />
     <Compile Include="XML\XMLValidator.cs" />
     <EmbeddedResource Include="AddRemoveRealm.resx">
@@ -117,6 +118,10 @@
     <Content Include="Includes\Config.xml">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Resources\addrealm_button_depressed.png" />
+    <Resource Include="Resources\addrealm_button.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <None Include="Resources\messagebox.png" />
     <None Include="Resources\realms.png" />
     <None Include="Resources\Launcherv2.png" />
