--- a/Source/Launcher.csproj
+++ b/Source/Launcher.csproj
@@ -88,7 +88,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XML\PluginScanner.cs" />
+    <Compile Include="XML\PluginHandler.cs" />
     <Compile Include="XML\XMLController.cs" />
     <Compile Include="XML\XMLValidator.cs" />
     <EmbeddedResource Include="AddWoWFolder.resx">
@@ -113,9 +113,9 @@
     <EmbeddedResource Include="Includes\Config.xsd">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <None Include="Includes\Plugin.xsd">
+    <EmbeddedResource Include="Includes\Plugin.xsd">
       <SubType>Designer</SubType>
-    </None>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
