--- a/Source/Launcher.csproj
+++ b/Source/Launcher.csproj
@@ -64,10 +64,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddWoWFolder.cs">
+    <Compile Include="Forms\AddWoWFolder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddWoWFolder.Designer.cs">
+    <Compile Include="Forms\AddWoWFolder.Designer.cs">
       <DependentUpon>AddWoWFolder.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AddRemoveRealm.cs">
@@ -91,7 +91,7 @@
     <Compile Include="XML\PluginHandler.cs" />
     <Compile Include="XML\XMLController.cs" />
     <Compile Include="XML\XMLValidator.cs" />
-    <EmbeddedResource Include="AddWoWFolder.resx">
+    <EmbeddedResource Include="Forms\AddWoWFolder.resx">
       <DependentUpon>AddWoWFolder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddRemoveRealm.resx">
