WoW Directories are now Plugins rather then a part of the config.

--- a/Source/Launcher.csproj
+++ b/Source/Launcher.csproj
@@ -116,6 +116,9 @@
     <EmbeddedResource Include="Includes\Plugin.xsd">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Includes\FolderPlugin.xsd">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
